# reflow

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  deploy.sh  pyproject.toml  reflow.spec  todo.md
.claude/: settings.json
.githooks/: pre-commit
.github/: opencode-ci.json  review-prompt.md
app/: attachments.py  audit.py  badge_config.py  bom_engine.py  bom_export.py  compare.py  csv_import.py  db.py  desktop.py  hard_change.py  hashing.py  main.py  migrations.py  models.py  paths.py  propagation.py  storage.py  validation.py
docs/: Reflow-需求文档.md  opencode-自动化.md  前端风格指南.md  部署-测试环境-CI.md
reflow.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: migrate_occurred_at_utc.py  opencode-triage.sh  select-triage-issues.sh  sync-deploy.sh
tests/: conftest.py  test_attachments.py  test_audit.py  test_badge_config.py  test_bom_engine.py  test_bom_export.py  test_compare.py  test_compare_ui.py  test_copy_hash_ui.py  test_copy_to_draft.py  test_cross_compare.py  test_cross_compare_ui.py  test_csv_change_import.py  test_csv_full_import.py  test_csv_import.py  test_db.py  test_delete_node.py  test_delete_ui.py  test_desktop.py  test_dockerfile_persistence.py  test_download_routes.py  test_edit_focus_ui.py  test_filter_enter_ui.py  test_hard_change.py  test_hard_change_models.py  test_hard_change_routes.py  test_hard_change_ui.py  test_hash_input_ui.py  test_hash_routes.py  test_hashing.py  test_import_routes.py  test_insert_routes.py  test_insert_ui.py  test_issue105_ui.py  test_issue79_ui.py  test_issue84_ui.py  test_migrations.py  test_models.py  (+16 more)
(+67 files in other folders)
