[project]
name = "reflow"
version = "0.1.1"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27", "pytest-playwright>=0.5"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
